--- a/UTDLauncher/MainWindow.xaml
+++ b/UTDLauncher/MainWindow.xaml
@@ -1,12 +1,35 @@
 ﻿<Window x:Class="UTDLauncher.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="594.876" Width="1018.463" Loaded="Window_Loaded">
+        Title="MainWindow" Height="942.251" Width="1206.463" Loaded="Window_Loaded">
     <Grid>
-        <Label Content="UNITY TOWER DEFENSE LAUNCHER" HorizontalAlignment="Center" Margin="229,22,199,0" VerticalAlignment="Top" FontSize="36" Width="582"/>
+        <Label Content="UNITY TOWER DEFENSE LAUNCHER" HorizontalAlignment="Center" Margin="229,22,199,0" VerticalAlignment="Top" FontSize="36" Width="582" FontFamily="Lao UI"/>
         <TextBox x:Name="txtCreateRoomName" HorizontalAlignment="Left" Height="23" Margin="73,194,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Button Content="Create Room" HorizontalAlignment="Left" Margin="73,222,0,0" VerticalAlignment="Top" Width="120" Click="Button_Click_1"/>
-        <ListBox x:Name="lstRooms" HorizontalAlignment="Left" Height="185" Margin="731,217,0,0" VerticalAlignment="Top" Width="219"/>
-
+        <ListBox x:Name="lstRooms" HorizontalAlignment="Left" Height="162" Margin="198,212,0,0" VerticalAlignment="Top" Width="219"/>
+        <Button Content="Join Game" HorizontalAlignment="Left" Margin="342,384,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Room List" HorizontalAlignment="Left" Margin="193,186,0,0" VerticalAlignment="Top"/>
+        <GroupBox Header="Currently Joined Game" HorizontalAlignment="Left" Margin="561,194,0,0" VerticalAlignment="Top" Height="473" Width="627" Visibility="Hidden"/>
+        <Label Content="-- ROOM NAME --" HorizontalAlignment="Left" Margin="796,222,0,0" VerticalAlignment="Top"/>
+        <ListBox HorizontalAlignment="Left" Height="192" Margin="573,417,0,0" VerticalAlignment="Top" Width="100"/>
+        <TextBox HorizontalAlignment="Left" Height="30" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="135" Margin="-447,266,0,0"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="653,322,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="653,294,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="653,266,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="925,266,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="925,294,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="925,322,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label Content="VS" HorizontalAlignment="Left" Margin="819,271,0,0" VerticalAlignment="Top" FontSize="48" FontFamily="SketchFlow Print"/>
+        <Button Content="Join -&gt;" HorizontalAlignment="Left" Margin="573,266,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="2,1.1"/>
+        <Button Content="Join -&gt;" HorizontalAlignment="Left" Margin="573,294,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Join -&gt;" HorizontalAlignment="Left" Margin="573,321,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="&lt;- Join" HorizontalAlignment="Left" Margin="1050,266,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="&lt;- Join" HorizontalAlignment="Left" Margin="1050,294,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="&lt;- Join" HorizontalAlignment="Left" Margin="1050,321,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Players in Room" HorizontalAlignment="Left" Margin="573,391,0,0" VerticalAlignment="Top"/>
+        <ListBox HorizontalAlignment="Left" Height="169" Margin="678,440,0,0" VerticalAlignment="Top" Width="447"/>
+        <Button Content="Send" HorizontalAlignment="Left" Height="43" Margin="985,614,0,0" VerticalAlignment="Top" Width="140"/>
+        <Label Content="Chat" HorizontalAlignment="Left" Margin="678,414,0,0" VerticalAlignment="Top"/>
+        <Button Content="Begin Game!" HorizontalAlignment="Left" Margin="754,360,0,0" VerticalAlignment="Top" Width="188" Height="44"/>
     </Grid>
 </Window>
